Made invisible hitbox changes to navigation bar; improved installation instructions; fixed Chrome hash link bug

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -8,13 +8,25 @@ html {
     font-style: italic;
 }
 
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .left-bar {
     display: none;
+    font-size: 16px;
+    padding-left: 0;
+    padding-right: 0;
 }
 .left-bar.enabled {
     display: block;
     position: fixed;
-    padding-right: 20px;
+    padding-right: 0;
     left: 0;
     top: 50px;
     height: calc(100vh - 50px);
@@ -22,6 +34,35 @@ html {
     max-width: 100vw;
     overflow-y: scroll;
 }
+
+.left-bar .bookmark {
+    cursor: pointer;
+    padding: 8px 20px;
+}
+
+.left-bar ul ul .bookmark {
+    padding-left: 40px;
+}
+
+.left-bar ul ul ul .bookmark {
+    padding-left: 60px;
+}
+
+.left-bar ul ul ul ul .bookmark {
+    padding-left: 80px;
+}
+
+.left-bar ul {
+    padding-left: 0;
+    padding-right: 0;
+    list-style: none;
+}
+
+.expander {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 
 .top-bar {
     position: fixed;
@@ -31,6 +72,9 @@ html {
     left: 0;
     background-color: #eee;
     width: 100vw;
+}
+
+.menu-button {
     padding-left: 20px;
     cursor: pointer;
 }
@@ -70,25 +114,6 @@ p, li, blockquote {
     line-height: 1.5em;
     font-family: serif;
     color: #111;
-}
-
-.left-bar {
-    font-size: 16px;
-}
-
-.left-bar li {
-    margin: 15px 0;
-    cursor: pointer;
-}
-
-.left-bar ul {
-    padding-left: 20px;
-    list-style: none;
-}
-
-.expander {
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 table {
